@@ -1,104 +1,54 @@
 package com.epic7.backend.service;
 
 import com.epic7.backend.dto.SkillDTO;
-import com.epic7.backend.model.Hero;
+import com.epic7.backend.model.PlayerHero;
 import com.epic7.backend.model.Skill;
-import com.epic7.backend.model.User;
-import com.epic7.backend.model.enums.SkillCategory;
-import com.epic7.backend.repository.HeroRepository;
+import com.epic7.backend.repository.PlayerHeroRepository;
 import com.epic7.backend.repository.SkillRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
- * Service pour gérer les compétences des héros.
- * Règles :
- * - Maximum 3 compétences par héros
- * - Une seule compétence passive autorisée, à la 2e position
- * 
- * @author hermas
+ * Service métier pour la lecture des compétences (skills).
+ * Les compétences sont liées aux héros dans la base de données
+ * et exposées sous forme de DTO.
  */
 @Service
 @RequiredArgsConstructor
 public class SkillService {
 
     private final SkillRepository skillRepository;
-    private final HeroRepository heroRepository;
+
+    private final PlayerHeroRepository playerHeroRepository;
 
     /**
-     * Récupère les compétences d’un héros.
+     * Récupère toutes les compétences associées à un héros (entité Hero).
      */
     public List<Skill> getSkillsByHeroId(Long heroId) {
         return skillRepository.findByHeroId(heroId);
     }
 
     /**
-     * Récupère les compétences d’un héros au format DTO.
+     * Récupère les compétences d’un héros sous forme de DTO.
      */
     public List<SkillDTO> getSkillDTOsByHero(Long heroId) {
-        return skillRepository.findByHeroId(heroId).stream()
+        return getSkillsByHeroId(heroId).stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
-     * Ajoute une compétence à un héros avec validation métier.
+     * Récupère les compétences d’un héros joueur (PlayerHero).
      */
-    public Skill addSkillToHero(Long heroId, Skill skill) {
-        Hero hero = heroRepository.findById(heroId)
-                .orElseThrow(() -> new RuntimeException("Héros introuvable"));
-
-        List<Skill> skills = skillRepository.findByHero(hero);
-
-        if (skills.size() >= 3) {
-            throw new IllegalStateException("Un héros ne peut pas avoir plus de 3 compétences.");
-        }
-
-        if (skill.getCategory() == SkillCategory.PASSIVE) {
-            boolean alreadyHasPassive = skills.stream()
-                    .anyMatch(s -> s.getCategory() == SkillCategory.PASSIVE);
-
-            if (alreadyHasPassive) {
-                throw new IllegalArgumentException("Un héros ne peut avoir qu'une seule compétence passive.");
-            }
-
-            if (skills.size() != 1) {
-                throw new IllegalArgumentException("La compétence passive doit être en 2e position.");
-            }
-        }
-
-        skill.setHero(hero);
-        return skillRepository.save(skill);
-    }
-
-    /**
-     * Supprime une compétence.
-     */
-    public void deleteSkill(Long skillId) {
-        skillRepository.deleteById(skillId);
-    }
-
-    /**
-     * Vérifie la position de la compétence passive.
-     */
-    public void validatePassiveSkillPosition(Long heroId) {
-        List<Skill> skills = skillRepository.findByHeroId(heroId);
-        for (int i = 0; i < skills.size(); i++) {
-            Skill skill = skills.get(i);
-            if (skill.getCategory() == SkillCategory.PASSIVE && i != 1) {
-                throw new IllegalStateException("La compétence passive doit être en 2e position.");
-            }
-        }
-    }
-
-    /**
-     * Retourne les compétences d’un héros pour un utilisateur (authentification future).
-     */
-    public List<Skill> getSkillsForPlayerHero(Long heroId, User user) {
-        return getSkillsByHeroId(heroId);
+    public List<SkillDTO> getSkillDTOsForPlayerHeroByPlayerHeroId(Long playerHeroId) {
+        PlayerHero playerHero = playerHeroRepository.findById(playerHeroId)
+                .orElseThrow(() -> new RuntimeException("Héros joueur introuvable"));
+        return skillRepository.findByHero(playerHero.getHero())
+                .stream()
+                .map(this::toDTO)
+                .toList();
     }
 
     /**
@@ -110,7 +60,7 @@ public class SkillService {
     }
 
     /**
-     * Convertit une entité Skill en DTO.
+     * Convertit une entité Skill en DTO (Data Transfer Object).
      */
     public SkillDTO toDTO(Skill skill) {
         SkillDTO dto = new SkillDTO();
@@ -118,6 +68,9 @@ public class SkillService {
         dto.setName(skill.getName());
         dto.setDescription(skill.getDescription());
         dto.setCategory(skill.getCategory() != null ? skill.getCategory().name() : null);
+        dto.setPosition(skill.getPosition());
+        dto.setIcon(skill.getIcon());
+        dto.setAnimation(skill.getAnimation());
         dto.setAction(skill.getAction() != null ? skill.getAction().name() : null);
         dto.setTargetGroup(skill.getTargetGroup() != null ? skill.getTargetGroup().name() : null);
         dto.setTargetCount(skill.getTargetCount());
@@ -130,33 +83,4 @@ public class SkillService {
         dto.setTriggerCondition(skill.getTriggerCondition() != null ? skill.getTriggerCondition().name() : null);
         return dto;
     }
-
-
-    /**
- * Met à jour une compétence existante.
- *
- * @param skillId       ID de la compétence à modifier
- * @param updatedSkill  Nouvelle version de la compétence
- * @return Compétence mise à jour
- */
-public Skill updateSkill(Long skillId, Skill updatedSkill) {
-    Skill existing = getSkillById(skillId);
-
-    existing.setName(updatedSkill.getName());
-    existing.setDescription(updatedSkill.getDescription());
-    existing.setCategory(updatedSkill.getCategory());
-    existing.setAction(updatedSkill.getAction());
-    existing.setTargetGroup(updatedSkill.getTargetGroup());
-    existing.setTargetCount(updatedSkill.getTargetCount());
-    existing.setScalingStat(updatedSkill.getScalingStat());
-    existing.setScalingFactor(updatedSkill.getScalingFactor());
-    existing.setCooldown(updatedSkill.getCooldown());
-    existing.setPassiveBonus(updatedSkill.getPassiveBonus());
-    existing.setBonusValue(updatedSkill.getBonusValue());
-    existing.setApplyToAllies(updatedSkill.getApplyToAllies());
-    existing.setTriggerCondition(updatedSkill.getTriggerCondition());
-
-    return skillRepository.save(existing);
-}
-
 }
